RMX1971: Add Overlay for Battery Health

--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -22,4 +22,10 @@
     -->
     <integer name="config_fingerprintSensorLocation">0</integer>
 
+<!-- Battery health -->
+    <string name="config_batteryChargeCycles">/sys/class/power_supply/battery/cycle_count</string>
+    <string name="config_batteryDesignCapacity">/sys/class/power_supply/battery/charge_full</string>
+    <string name="config_batteryCalculatedCapacity">/sys/class/power_supply/battery/charge_counter</string>
+    <bool name="config_supportBatteryHealth">true</bool>
+
 </resources>
